<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.edimaudo.tohispterquiz.MainActivity">

        <TextView
            android:id="@+id/question1text"
            style="@style/textStyle"
            android:text="@string/question1"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/question1answer"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/question1text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:text="@string/question1answerA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:text="@string/question1answerB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:text="@string/question1answerC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:text="@string/question1answerD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <TextView
            android:id="@+id/question2text"
            android:layout_below="@id/question1answer"
            android:layout_marginTop="10dp"
            style="@style/textStyle"
            android:text="@string/question2"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup

            android:id="@+id/question2answer"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/question2text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:text="@string/question2answerA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:text="@string/question2answerB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:text="@string/question2answerC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:text="@string/question2answerD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <TextView
            android:id="@+id/question3text"
            android:layout_below="@id/question2answer"
            android:layout_marginTop="10dp"
            style="@style/textStyle"
            android:text="@string/question3"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/question3answer"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/question3text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:text="@string/question3answerA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:text="@string/question3answerB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:text="@string/question3answerC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:text="@string/question3answerD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <TextView
            android:id="@+id/question4text"
            android:layout_below="@id/question3answer"
            android:layout_marginTop="10dp"
            style="@style/textStyle"
            android:text="@string/question4"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/question4answer"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/question4text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:text="@string/question4answerA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:text="@string/question4answerB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:text="@string/question4answerC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:text="@string/question4answerD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>


        <TextView
            android:id="@+id/question5text"
            android:layout_below="@id/question4answer"
            android:layout_marginTop="10dp"
            style="@style/textStyle"
            android:text="@string/question5"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/question5answer"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/question5text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:text="@string/question5answerA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:text="@string/question5answerB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:text="@string/question5answerC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:text="@string/question5answerD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <Button
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/submit"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:id="@+id/submitButton"
            android:layout_below="@id/question5answer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </RelativeLayout>
</ScrollView>



